--- a/Blazorade.Teams.Components/Blazorade.Teams.Components.csproj
+++ b/Blazorade.Teams.Components/Blazorade.Teams.Components.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Blazorade.Core" Version="1.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.4" />
   </ItemGroup>
