--- a/TeamsTabAppServer/TeamsTabAppServer.csproj
+++ b/TeamsTabAppServer/TeamsTabAppServer.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Graph" Version="3.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Blazorade.Teams\Blazorade.Teams.csproj" />
   </ItemGroup>
 
