Moved sample apps to designated folder.

--- a/Samples/TeamsTabAppClient/TeamsTabAppClient.csproj
+++ b/Samples/TeamsTabAppClient/TeamsTabAppClient.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Blazorade.Teams\Blazorade.Teams.csproj" />
+    <ProjectReference Include="..\..\Blazorade.Teams\Blazorade.Teams.csproj" />
   </ItemGroup>
 
 </Project>
