--- a/Samples/TeamsTabAppServer/TeamsTabAppServer.csproj
+++ b/Samples/TeamsTabAppServer/TeamsTabAppServer.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Blazorade.Teams\Blazorade.Teams.csproj" />
+    <ProjectReference Include="..\..\Blazorade.Teams\Blazorade.Teams.csproj" />
   </ItemGroup>
 
 </Project>
