Use the Teams SDK for SSO.
Microsoft Graph API now needs a token issued using the on-behalf-flow

--- a/Blazorade.Teams/Blazorade.Teams.csproj
+++ b/Blazorade.Teams/Blazorade.Teams.csproj
@@ -47,6 +47,8 @@
     <PackageReference Include="Blazorade.Core" Version="2.0.0-preview1" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
 </Project>
