--- a/Samples/TeamsTabAppServer/appsettings.Development.json
+++ b/Samples/TeamsTabAppServer/appsettings.Development.json
@@ -2,7 +2,7 @@
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
