--- a/Samples/TeamsTabAppServer/TeamsTabAppServer.csproj
+++ b/Samples/TeamsTabAppServer/TeamsTabAppServer.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
     <PackageReference Include="Microsoft.Graph" Version="3.21.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.25.0" />
   </ItemGroup>
 
   <ItemGroup>
