--- a/Samples/TeamsTabAppServer/TeamsTabAppServer.csproj
+++ b/Samples/TeamsTabAppServer/TeamsTabAppServer.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Graph" Version="3.21.0" />
+    <PackageReference Include="Microsoft.Graph" Version="4.54.0" />
   </ItemGroup>
 
   <ItemGroup>
